
  ## filters
  - deprecation: the --grok-patterns-path flag is deprecated and will now
    warn you if you use it. (LOGSTASH-803)
  - feature: grok: Adds tag_on_failure setting so you can prevent grok from
    tagging events on failure. (#328, patch by Neil Prosser)
  - new: uaparser: parses user agent strings in to structured data based on
    BrowserScope data (#347, patch by Dan Everton)

  ## outputs
  - fix bug in mongo output that would fail to load bson_java support
    (LOGSTASH-849)
  - Added tag support to gelf output. Returns tags as _tags field (LOGSTASH-880)
  - bugfix: elasticsearch: Fix a race condition. (#340, patch by Raymond Feng)
  - improvement: http: now supports a custom 'message' format for building your
    own http bodies from an event. (#319, patch by Christian S)
 
1.1.9 (January 10, 2013)
  ## inputs
  - bugfix: all inputs: fix bug where some @source values were not valid urls

  ## filters
  - bugfix: mutate: skip missing fields in 'convert' (#244, patch by Ralph Meijer)

  ## outputs
  - improvement: gelf: new tunable 'ignore_metadata' flag to set which fields
    to ignore if ship_metadata is set. (#244, patch by Ralph Meijer)
  - improvement: gelf: make short_message's field name tunable (#244, patch by
    Ralph Meijer)

1.1.8 (January 10, 2013)
  ## general
  - patched another work around for JRUBY-6970 (LOGSTASH-801)

  ## inputs
  - bugfix: tcp: 'Address in use' errors now report the host/port involved.
    (LOGSTASH-831)
  - bugfix: zeromq: fix bug where an invalid url could be given as a source
    (LOGSTASH-821, #306)

  ## outputs
  - bugfix: elasticsearch_river: it now resolves evaluates %{} variables in
    index and index_type settings. (LOGSTASH-819)

1.1.7 (January 3, 2013)
 ## inputs
 - fix bug where @source_host was set to 'false' in many cases.

 ## outputs
 - improvement: redis: shuffle_hosts is now enabled by default

1.1.6 (January 2, 2013)
 ## Overview of this release:
 - new inputs: drupal_dblog.